Use generics and abstract list